--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-form-submission",
+  "name": "gform-automation",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
